src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Nunito:wght@400;500;600&display=swap');
@import "tailwindcss";

@theme {
    --font-header: "Patrick Hand SC", cursive;
    --font-text: "Kalam", cursive;
    
    --color-page-bg: #f3d7a4;
    /*--color-page-bg-dark: #1f2933;*/
    
    --color-card-bg: #f1eadb;
    
    --color-header-sky: #4FA7EE;
    --color-logo-ink: #174A6A;
    --color-nav-ink: #153B56;
}

@layer base {
  html {
    min-height: 100%;
    scroll-behavior: smooth;
  }

  body {
    min-height: 100%;
    font-family: var(--font-text);
    margin: 0;
  }
}

h1 {
    font-family: var(--font-header);
    /*font-size: clamp(3.25rem, 5vw, 6rem);
    line-height: clamp(1.05rem, 5vw, 7rem);*/
    font-size: 4rem;
    line-height: 4.9rem;
}

@media (min-width:768px) {
    h1 {
        font-size: 6rem;
        line-height: 7rem;
    }
}

h3 {
    /*font-size: clamp(1.35rem, 5vw, 2rem);*/
    font-size: 1.2rem;
    /*line-height: clamp(1.35rem, 5vw, 3rem);*/
    line-height: 2rem;
}

@media (min-width:768px) {
    h3 {
        font-size: 2rem;
        line-height: 3rem;
    }
}

p {
    line-height: 24px;
}

